[tool.poetry]
name = "cryptography"
version = "0.1.0"
description = "Implementation of cryptography algorithms"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{ include = "crypto" }]

[tool.poetry.dependencies]
python = "^3.12"

[tool.poetry.group.dev.dependencies]
autopep8 = "^2.3.1"
setuptools = "^71.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
sha1 = "crypto.sha1.main:main"
hmac = "crypto.hmac.main:main"
